--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Menu Navigation Bar with Logo and Hamburger Menu</title>
+	<link rel="stylesheet" href="gaya.css">
+	<link rel="script" href="skripkode.js">
 
+</head>
+<body>
+
+	<!-- The menu navigation bar -->
+	<div class="navbar" id="myNavbar">
+		<div class="logo">
+			<a href="#"><img src="logo.png" alt="Logo"></a>
+		</div>
+		<a href="#">Home</a>
+		<a href="#">About Us</a>
+		<a href="#">Services</a>
+		<a href="#">Contact Us</a>
+		<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+	</div>
+
+
+
+</body>
+</html>
