--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Menu Navigation Bar with Logo and Hamburger Menu</title>
 	<link rel="stylesheet" href="gaya.css">
+	<link rel="stylesheet" href="body.css">
 	<link rel="script" href="skripkode.js">
 
 </head>
